--- a/CUGOS_111019.mkd
+++ b/CUGOS_111019.mkd
@@ -6,12 +6,14 @@ Managing TileMill Styles in Github
 Sharing my successes and failures in creating a portable TileMill
 style, hosted on GitHub.
 
-# what/Why am I doing?
+# what am I doing? why am I doing this?
 
 * Began as an experiment with writing styles using TileMill.
 
 * Requirement/Want to work on multiple machines (work/home/netbook).
-  Hooray Github! The data/project management is just as interesting
-  as the styling.
+  * Hooray Github! 
+  * The data/project management is just as interesting as the styling.
 
 * **Goal** to share with others, allow anyone to improve.
+
+
